# loreforge

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  generate.sh  run.sh  runDocker.sh  runServer.sh  vcpkg-configuration.json  vcpkg.json
.roo/rules/: 01-plans.md  02-build_environment.md
.roo/rules-code/: 01-coding_style.md
cmake/toolchains/: linux-arm64.cmake  linux-x64.cmake
docs/: development_plan.md  models.md  research.md
protos/: loreforge.proto
src/loreforge/: main.cpp
tests/: main.cpp
tests/cpp_test_files/: sample.cpp
tests/python_test_files/: sample.py
vcpkg/custom_ports/openblas/: disable-avx512.patch  portfile.cmake
